# server/routes/proxy-query-buckets.go
@@ -14,6 +14,15 @@ const (
 	bucketQueryUrl = "http://v1-beta.sonr.ws:1317/sonr-io/sonr/bucket/where_is?"
 )
 
+// @BasePath /api/v1
+// @Summary QueryBuckets
+// @Schemes
+// @Description Query the Sonr Blockchain for all public buckets on the Blockchain. This is a read-only endpoint.
+// @Tags Bucket
+// @Produce json
+// @Success 200 {object} BucketResponse
+// @Failure      500  {object} FailedResponse
+// @Router /bucket/query [get]
 type BucketResponse struct {
 	WhereIs []struct {
 		Did        string        `json:"did"`
